--- a/v25.html
+++ b/v25.html
@@ -9,47 +9,94 @@
             --bg: #050505; --card: #0a0a0a; --text: #ffffff; 
             --border: #1a1a1a; 
             --gold: linear-gradient(135deg, #bf953f 0%, #fcf6ba 45%, #b38728 70%, #fbf5b7 100%);
+            --glow: 0 0 30px rgba(191, 149, 63, 0.1);
         }
-        body { margin: 0; background: var(--bg); color: var(--text); font-family: 'Inter', sans-serif; }
-        nav { background: rgba(0,0,0,0.9); padding: 20px 40px; border-bottom: 1px solid #bf953f; display: flex; justify-content: space-between; align-items: center; }
+        body.light-mode { --bg: #fdfdfd; --card: #ffffff; --text: #050505; --border: #e0e0e0; }
+        body { margin: 0; background: var(--bg); color: var(--text); font-family: 'Inter', sans-serif; transition: 0.4s; overflow-x: hidden; }
+
+        nav { background: rgba(0,0,0,0.9); backdrop-filter: blur(15px); padding: 20px 40px; border-bottom: 1px solid #bf953f; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; }
         .logo-v8 { font-size: 24px; font-weight: 900; letter-spacing: 6px; background: var(--gold); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-transform: uppercase; }
+        .btn-top { cursor: pointer; padding: 10px 20px; border: 1px solid #bf953f; border-radius: 50px; font-size: 10px; font-weight: 900; background: transparent; color: #bf953f; text-transform: uppercase; margin-left: 10px; }
+
         main { padding: 40px 20px; display: flex; flex-direction: column; align-items: center; }
-        .glass-panel { background: var(--card); width: 100%; max-width: 850px; border-radius: 30px; border: 1px solid var(--border); padding: 45px; box-sizing: border-box; }
-        .progress-bar-bg { width: 100%; height: 8px; background: #111; border-radius: 20px; overflow: hidden; margin-bottom: 20px; }
+        .glass-panel { background: var(--card); width: 100%; max-width: 850px; border-radius: 30px; border: 1px solid var(--border); padding: 45px; box-sizing: border-box; box-shadow: var(--glow); position: relative; }
+
+        .progress-container { margin-bottom: 40px; }
+        .progress-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px; }
+        .progress-label { font-size: 10px; font-weight: 900; color: #bf953f; text-transform: uppercase; letter-spacing: 2px; }
+        .progress-percent { color: #fcf6ba; font-size: 16px; font-weight: bold; }
+        .progress-bar-bg { width: 100%; height: 8px; background: #111; border-radius: 20px; overflow: hidden; }
         .progress-bar-fill { width: 0%; height: 100%; background: var(--gold); transition: 0.6s; }
-        label { font-size: 11px; font-weight: 800; color: #bf953f; text-transform: uppercase; display: block; margin-bottom: 10px; }
-        textarea, input { width: 100%; background: rgba(255,255,255,0.02); border: 1px solid var(--border); padding: 15px; border-radius: 12px; color: var(--text); margin-bottom: 20px; box-sizing: border-box; }
-        .btn-prime { width: 100%; background: var(--gold); color: #000; border: none; padding: 25px; border-radius: 15px; font-weight: 900; cursor: pointer; text-transform: uppercase; }
-        #output-zone { display: none; margin-top: 30px; width: 100%; max-width: 850px; }
-        #prompt-result { width: 100%; height: 400px; background: #000; color: #fcf6ba; border: 1px solid #bf953f; padding: 20px; border-radius: 15px; font-family: monospace; }
-        footer { margin-top: 50px; padding: 40px; text-align: center; border-top: 1px solid var(--border); font-size: 10px; }
+
+        label { font-size: 11px; font-weight: 800; color: #bf953f; text-transform: uppercase; display: block; margin-bottom: 15px; letter-spacing: 2px; }
+        textarea, input { width: 100%; background: rgba(255,255,255,0.02); border: 1px solid var(--border); padding: 20px; border-radius: 15px; color: var(--text); font-size: 16px; outline: none; margin-bottom: 30px; box-sizing: border-box; }
+
+        .btn-prime { width: 100%; background: var(--gold); color: #000; border: none; padding: 28px; border-radius: 18px; font-weight: 900; cursor: pointer; text-transform: uppercase; letter-spacing: 5px; font-size: 16px; transition: 0.5s; }
+        .btn-prime.ready { animation: pulseGlow 1.5s infinite; transform: scale(1.02); }
+
+        @keyframes pulseGlow { 0% { box-shadow: 0 0 0 0 rgba(191, 149, 63, 0.6); } 70% { box-shadow: 0 0 0 20px rgba(191, 149, 63, 0); } 100% { box-shadow: 0 0 0 0 rgba(191, 149, 63, 0); } }
+
+        #output-zone { display: none; margin-top: 50px; width: 100%; max-width: 850px; }
+        #prompt-result { width: 100%; height: 480px; background: #000; color: #fcf6ba; border: 1px solid #bf953f; padding: 30px; border-radius: 20px; font-family: monospace; }
+
+        footer { margin-top: 80px; padding: 40px; text-align: center; border-top: 1px solid var(--border); }
+        .footer-text { font-size: 10px; color: var(--text); opacity: 0.5; text-transform: uppercase; letter-spacing: 2px; line-height: 2; }
+
         #access-denied { display: none; height: 100vh; flex-direction: column; justify-content: center; align-items: center; background: #000; color: #ff4d4d; }
     </style>
 </head>
 <body>
 
 <div id="access-denied">
-    <h1>ACESSO NEGADO</h1>
+    <h1 style="letter-spacing: 10px;">ACCESS REVOKED</h1>
+    <p>SISTEMA V8 ELITE PROTOCOL</p>
 </div>
 
 <div id="main-app" style="display: none;">
-    <nav><div class="logo-v8">V8 ELITE</div></nav>
+    <nav>
+        <div class="logo-v8">V8 ELITE</div>
+        <div>
+            <button class="btn-top" onclick="document.body.classList.toggle('light-mode')">Inverter Cores</button>
+            <button class="btn-top" style="border-color:#ff4d4d; color:#ff4d4d;" onclick="location.reload()">Limpar Memória</button>
+        </div>
+    </nav>
+
     <main>
         <div class="glass-panel">
-            <div class="progress-bar-bg"><div id="bar-fill" class="progress-bar-fill"></div></div>
-            <label>Missão</label><input type="text" id="destino" oninput="monitorar()">
-            <label>Fatos</label><textarea id="fatos" rows="6" oninput="monitorar()"></textarea>
-            <button class="btn-prime" onclick="gerarPrompt()">Gerar Comando Elite</button>
+            <div class="progress-container">
+                <div class="progress-header">
+                    <span class="progress-label">Protocolo de Integridade de Dados</span>
+                    <span id="percent-text" class="progress-percent">0%</span>
+                </div>
+                <div class="progress-bar-bg"><div id="bar-fill" class="progress-bar-fill"></div></div>
+            </div>
+
+            <label>CORE MISSION OBJECTIVE</label>
+            <input type="text" id="destino" oninput="monitorar()" placeholder="Qual o resultado final desejado?">
+
+            <label>PARÂMETROS TÉCNICOS & RIGOR JURÍDICO</label>
+            <textarea id="base" rows="2" placeholder="Diretrizes técnicas, leis ou regras de ouro..."></textarea>
+
+            <label>INPUT DE INTELIGÊNCIA BRUTA</label>
+            <textarea id="fatos" rows="6" oninput="monitorar()" placeholder="Descreva os fatos ou a ideia bruta aqui..."></textarea>
+
+            <button id="btn-main" class="btn-prime" onclick="processar()">Ativar Protocolo MODO ELITE</button>
         </div>
+
         <div id="output-zone">
+            <label style="color: #fcf6ba;">💎 DIAMANTE POLIDO (RIGOR ABSOLUTO):</label>
             <textarea id="prompt-result" readonly></textarea>
-            <button onclick="copiar()" style="width:100%; padding:20px; background:var(--gold); border:none; border-radius:15px; font-weight:900; margin-top:10px;">Copiar</button>
+            <button onclick="copiar()" style="width:100%; padding:25px; background:var(--gold); border:none; border-radius:15px; font-weight:900; margin-top:20px; cursor:pointer; text-transform:uppercase;">Copiar Comando</button>
         </div>
     </main>
+
     <footer>
-        <strong>CÁSSIA PROMPT ® | V8 ELITE EDITION</strong><br>
-        <span id="licenciado-para" style="color: #bf953f; font-weight: bold; font-size: 13px; letter-spacing: 1px;"></span><br><br>
-        <span style="opacity: 0.6;">A RESPONSABILIDADE É DE QUEM ESTÁ USANDO. O PROGRAMA APENAS GERA O PROMPT.</span>
+        <div class="footer-text">
+            <strong>CÁSSIA PROMPT ® | V8 ELITE EDITION | LICENÇA INTERNACIONAL</strong><br>
+            <span id="licenciado-para" style="color: #bf953f; font-weight: bold; font-size: 11px;">LICENCIADO PARA: AGUARDANDO...</span><br>
+            ENGENHARIA DE COMANDO COM FILTRO ANTI-ALUCINAÇÃO ATIVADO<br><br>
+            <span style="opacity: 0.8; color: #ff4d4d;">A RESPONSABILIDADE É DE QUEM ESTÁ USANDO. O PROGRAMA APENAS GERA O PROMPT.</span>
+        </div>
     </footer>
 </div>
 
@@ -57,25 +104,21 @@
     function checkAccess() {
         const params = new URLSearchParams(window.location.search);
         const userParam = (params.get('user') || params.get('id') || "").toLowerCase();
-        
         const app = document.getElementById('main-app');
         const denied = document.getElementById('access-denied');
         const displayLicenca = document.getElementById('licenciado-para');
 
         if (userParam !== "") {
             app.style.display = 'block';
+            let nomeFinal = "CLIENTE ELITE";
             
-            // LÓGICA DE PRIORIDADE: NOMES BONITOS PRIMEIRO
-            if (userParam.includes("natalia")) {
-                displayLicenca.innerText = "LICENCIADO PARA: DRA. NATALIA";
-            } else if (userParam.includes("helen")) {
-                displayLicenca.innerText = "LICENCIADO PARA: HELEN CRISTINA";
-            } else if (userParam.includes("paula")) {
-                displayLicenca.innerText = "LICENCIADO PARA: DRA. PAULA";
-            } else {
-                // Se for o código TKFU ou qualquer outro, ele mostra CLIENTE ELITE
-                displayLicenca.innerText = "LICENCIADO PARA: CLIENTE ELITE";
-            }
+            // LIMPEZA DO NOME NO RODAPÉ
+            if (userParam.includes("natalia")) nomeFinal = "DRA. NATALIA";
+            else if (userParam.includes("helen")) nomeFinal = "HELEN CRISTINA";
+            else if (userParam.includes("paula")) nomeFinal = "DRA. PAULA";
+            else nomeFinal = userParam.split('_')[0].toUpperCase();
+
+            displayLicenca.innerText = "LICENCIADO PARA: " + nomeFinal;
         } else {
             denied.style.display = 'flex';
         }
@@ -84,15 +127,29 @@
     function monitorar() {
         const d = document.getElementById('destino').value.length;
         const f = document.getElementById('fatos').value.length;
-        let progresso = Math.min(100, ((d / 10) * 30) + ((f / 30) * 70));
-        document.getElementById('bar-fill').style.width = progresso + "%";
+        let progresso = Math.min(100, ((d / 20) * 30) + ((f / 60) * 70));
+        document.getElementById('bar-fill').style.width = Math.round(progresso) + "%";
+        document.getElementById('percent-text').innerText = Math.round(progresso) + "%";
+        if(progresso >= 90) document.getElementById('btn-main').classList.add('ready');
+    }
+
+    function processar() {
+        const btn = document.getElementById('btn-main');
+        btn.innerText = "PROCESSANDO RIGOR JURÍDICO...";
+        setTimeout(() => {
+            gerarPrompt();
+            btn.innerText = "ATUALIZAR PROTOCOLO";
+        }, 1000);
     }
 
     function gerarPrompt() {
         const d = document.getElementById('destino').value;
+        const b = document.getElementById('base').value;
         const f = document.getElementById('fatos').value;
-        document.getElementById('prompt-result').value = `ORDEM V8 ELITE:\n\nOBJETIVO: ${d}\nRELATO: ${f}\n\n⚠️ RIGOR: NÃO INVENTE DADOS. USE APENAS A VERDADE.`;
+        const mestre = `ORDEM V8 ELITE EDITION\n\n1. MISSÃO: ${d}\n2. REGRAS: ${b}\n3. INPUT: ${f}\n\n⚠️ RIGOR: PROIBIDO INVENTAR. APENAS A VERDADE.`;
+        document.getElementById('prompt-result').value = mestre;
         document.getElementById('output-zone').style.display = 'block';
+        window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'});
     }
 
     function copiar() {
