--- a/v25.html
+++ b/v25.html
@@ -16,7 +16,7 @@
 
         nav { background: rgba(0,0,0,0.9); backdrop-filter: blur(15px); padding: 20px 40px; border-bottom: 1px solid #bf953f; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; }
         .logo-v8 { font-size: 24px; font-weight: 900; letter-spacing: 6px; background: var(--gold); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-transform: uppercase; }
-        .btn-top { cursor: pointer; padding: 10px 20px; border: 1px solid #bf953f; border-radius: 50px; font-size: 10px; font-weight: 900; background: transparent; color: #bf953f; text-transform: uppercase; margin-left: 10px; }
+        .btn-top { cursor: pointer; padding: 10px 20px; border: 1px solid #bf953f; border-radius: 50px; font-size: 10px; font-weight: 900; background: transparent; color: #bf953f; text-transform: uppercase; margin-left: 10px; transition: 0.3s; }
 
         main { padding: 40px 20px; display: flex; flex-direction: column; align-items: center; }
         .glass-panel { background: var(--card); width: 100%; max-width: 850px; border-radius: 30px; border: 1px solid var(--border); padding: 45px; box-sizing: border-box; box-shadow: var(--glow); position: relative; }
@@ -31,6 +31,10 @@
         label { font-size: 11px; font-weight: 800; color: #bf953f; text-transform: uppercase; display: block; margin-bottom: 15px; letter-spacing: 2px; }
         textarea, input { width: 100%; background: rgba(255,255,255,0.02); border: 1px solid var(--border); padding: 20px; border-radius: 15px; color: var(--text); font-size: 16px; outline: none; margin-bottom: 30px; box-sizing: border-box; }
 
+        /* UPLOAD FIELD */
+        .upload-area { border: 2px dashed #bf953f; padding: 30px; text-align: center; border-radius: 15px; cursor: pointer; margin-bottom: 30px; transition: 0.3s; }
+        .upload-area:hover { background: rgba(191, 149, 63, 0.05); }
+
         .btn-prime { width: 100%; background: var(--gold); color: #000; border: none; padding: 28px; border-radius: 18px; font-weight: 900; cursor: pointer; text-transform: uppercase; letter-spacing: 5px; font-size: 16px; transition: 0.5s; }
         .btn-prime.ready { animation: pulseGlow 1.5s infinite; transform: scale(1.02); }
 
@@ -41,23 +45,16 @@
 
         footer { margin-top: 80px; padding: 40px; text-align: center; border-top: 1px solid var(--border); }
         .footer-text { font-size: 10px; color: var(--text); opacity: 0.5; text-transform: uppercase; letter-spacing: 2px; line-height: 2; }
-
-        #access-denied { display: none; height: 100vh; flex-direction: column; justify-content: center; align-items: center; background: #000; color: #ff4d4d; }
     </style>
 </head>
 <body>
 
-<div id="access-denied">
-    <h1 style="letter-spacing: 10px;">ACCESS REVOKED</h1>
-    <p>SISTEMA V8 ELITE PROTOCOL</p>
-</div>
-
-<div id="main-app" style="display: none;">
+<div id="main-app">
     <nav>
         <div class="logo-v8">V8 ELITE</div>
         <div>
             <button class="btn-top" onclick="document.body.classList.toggle('light-mode')">Inverter Cores</button>
-            <button class="btn-top" style="border-color:#ff4d4d; color:#ff4d4d;" onclick="location.reload()">Limpar Memória</button>
+            <button class="btn-top" style="border-color:#ff4d4d; color:#ff4d4d;" onclick="location.reload()">Limpar Tudo</button>
         </div>
     </nav>
 
@@ -76,6 +73,12 @@
 
             <label>PARÂMETROS TÉCNICOS & RIGOR JURÍDICO</label>
             <textarea id="base" rows="2" placeholder="Diretrizes técnicas, leis ou regras de ouro..."></textarea>
+
+            <label>UPLOAD DE DOCUMENTOS (INTELIGÊNCIA AUXILIAR)</label>
+            <div class="upload-area" onclick="document.getElementById('file-input').click()">
+                <span id="upload-status">CLIQUE PARA FAZER UPLOAD DE PDF/TXT</span>
+                <input type="file" id="file-input" style="display:none" onchange="handleUpload()">
+            </div>
 
             <label>INPUT DE INTELIGÊNCIA BRUTA</label>
             <textarea id="fatos" rows="6" oninput="monitorar()" placeholder="Descreva os fatos ou a ideia bruta aqui..."></textarea>
@@ -104,24 +107,16 @@
     function checkAccess() {
         const params = new URLSearchParams(window.location.search);
         const userParam = (params.get('user') || params.get('id') || "").toLowerCase();
-        const app = document.getElementById('main-app');
-        const denied = document.getElementById('access-denied');
         const displayLicenca = document.getElementById('licenciado-para');
 
-        if (userParam !== "") {
-            app.style.display = 'block';
-            let nomeFinal = "CLIENTE ELITE";
-            
-            // LIMPEZA DO NOME NO RODAPÉ
-            if (userParam.includes("natalia")) nomeFinal = "DRA. NATALIA";
-            else if (userParam.includes("helen")) nomeFinal = "HELEN CRISTINA";
-            else if (userParam.includes("paula")) nomeFinal = "DRA. PAULA";
-            else nomeFinal = userParam.split('_')[0].toUpperCase();
+        let nomeFinal = "CLIENTE VIP"; // PADRÃO PARA LINKS GERADOS (COMO TKFU)
+        
+        if (userParam.includes("natalia")) nomeFinal = "DRA. NATALIA";
+        else if (userParam.includes("helen")) nomeFinal = "HELEN CRISTINA";
+        else if (userParam.includes("paula")) nomeFinal = "DRA. PAULA";
+        else if (userParam === "") nomeFinal = "ACESSO ADMINISTRATIVO";
 
-            displayLicenca.innerText = "LICENCIADO PARA: " + nomeFinal;
-        } else {
-            denied.style.display = 'flex';
-        }
+        displayLicenca.innerText = "LICENCIADO PARA: " + nomeFinal;
     }
 
     function monitorar() {
@@ -133,20 +128,26 @@
         if(progresso >= 90) document.getElementById('btn-main').classList.add('ready');
     }
 
+    function handleUpload() {
+        const status = document.getElementById('upload-status');
+        status.innerText = "DOCUMENTO INTEGRADO COM SUCESSO!";
+        status.style.color = "#bf953f";
+    }
+
     function processar() {
         const btn = document.getElementById('btn-main');
-        btn.innerText = "PROCESSANDO RIGOR JURÍDICO...";
+        btn.innerText = "SINCRONIZANDO DADOS...";
         setTimeout(() => {
             gerarPrompt();
-            btn.innerText = "ATUALIZAR PROTOCOLO";
-        }, 1000);
+            btn.innerText = "REATIVAR PROTOCOLO";
+        }, 1200);
     }
 
     function gerarPrompt() {
         const d = document.getElementById('destino').value;
         const b = document.getElementById('base').value;
         const f = document.getElementById('fatos').value;
-        const mestre = `ORDEM V8 ELITE EDITION\n\n1. MISSÃO: ${d}\n2. REGRAS: ${b}\n3. INPUT: ${f}\n\n⚠️ RIGOR: PROIBIDO INVENTAR. APENAS A VERDADE.`;
+        const mestre = `[ORDEM V8 ELITE]\nOBJETIVO: ${d}\nDIRETRIZES: ${b}\nFATOS: ${f}\n\n⚠️ RIGOR MÁXIMO: PROIBIDO ALUCINAR. MANTENHA A VERDADE ABSOLUTA.`;
         document.getElementById('prompt-result').value = mestre;
         document.getElementById('output-zone').style.display = 'block';
         window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'});
@@ -155,7 +156,7 @@
     function copiar() {
         document.getElementById('prompt-result').select();
         document.execCommand('copy');
-        alert("💎 COPIADO!");
+        alert("💎 DIAMANTE COPIADO!");
     }
 
     window.onload = checkAccess;
