--- a/v25.html
+++ b/v25.html
@@ -12,39 +12,37 @@
             --glow: 0 0 30px rgba(191, 149, 63, 0.1);
         }
         body.light-mode { --bg: #fdfdfd; --card: #ffffff; --text: #050505; --border: #e0e0e0; }
-        body { margin: 0; background: var(--bg); color: var(--text); font-family: 'Inter', sans-serif; transition: 0.4s; overflow-x: hidden; }
+        body { margin: 0; background: var(--bg); color: var(--text); font-family: 'Inter', sans-serif; transition: 0.4s; }
 
-        nav { background: rgba(0,0,0,0.9); backdrop-filter: blur(15px); padding: 20px 40px; border-bottom: 1px solid #bf953f; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; }
+        nav { background: rgba(0,0,0,0.9); padding: 20px 40px; border-bottom: 1px solid #bf953f; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; }
         .logo-v8 { font-size: 24px; font-weight: 900; letter-spacing: 6px; background: var(--gold); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-transform: uppercase; }
-        .btn-top { cursor: pointer; padding: 10px 20px; border: 1px solid #bf953f; border-radius: 50px; font-size: 10px; font-weight: 900; background: transparent; color: #bf953f; text-transform: uppercase; margin-left: 10px; transition: 0.3s; }
+        .btn-top { cursor: pointer; padding: 10px 20px; border: 1px solid #bf953f; border-radius: 50px; font-size: 10px; font-weight: 900; background: transparent; color: #bf953f; text-transform: uppercase; margin-left: 10px; }
 
         main { padding: 40px 20px; display: flex; flex-direction: column; align-items: center; }
-        .glass-panel { background: var(--card); width: 100%; max-width: 850px; border-radius: 30px; border: 1px solid var(--border); padding: 45px; box-sizing: border-box; box-shadow: var(--glow); position: relative; }
+        .glass-panel { background: var(--card); width: 100%; max-width: 850px; border-radius: 30px; border: 1px solid var(--border); padding: 45px; box-shadow: var(--glow); }
 
-        .progress-container { margin-bottom: 40px; }
+        .progress-container { margin-bottom: 30px; }
         .progress-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px; }
-        .progress-label { font-size: 10px; font-weight: 900; color: #bf953f; text-transform: uppercase; letter-spacing: 2px; }
+        .progress-label { font-size: 10px; font-weight: 900; color: #bf953f; text-transform: uppercase; }
         .progress-percent { color: #fcf6ba; font-size: 16px; font-weight: bold; }
         .progress-bar-bg { width: 100%; height: 8px; background: #111; border-radius: 20px; overflow: hidden; }
         .progress-bar-fill { width: 0%; height: 100%; background: var(--gold); transition: 0.6s; }
 
-        label { font-size: 11px; font-weight: 800; color: #bf953f; text-transform: uppercase; display: block; margin-bottom: 15px; letter-spacing: 2px; }
-        textarea, input { width: 100%; background: rgba(255,255,255,0.02); border: 1px solid var(--border); padding: 20px; border-radius: 15px; color: var(--text); font-size: 16px; outline: none; margin-bottom: 30px; box-sizing: border-box; }
+        label { font-size: 11px; font-weight: 800; color: #bf953f; text-transform: uppercase; display: block; margin-bottom: 10px; letter-spacing: 1px; }
+        textarea, input { width: 100%; background: rgba(255,255,255,0.02); border: 1px solid var(--border); padding: 18px; border-radius: 12px; color: var(--text); font-size: 15px; outline: none; margin-bottom: 25px; box-sizing: border-box; }
 
-        /* UPLOAD FIELD */
-        .upload-area { border: 2px dashed #bf953f; padding: 30px; text-align: center; border-radius: 15px; cursor: pointer; margin-bottom: 30px; transition: 0.3s; }
-        .upload-area:hover { background: rgba(191, 149, 63, 0.05); }
+        /* UPLOAD SLIM MODE */
+        .upload-row { display: flex; align-items: center; gap: 15px; margin-bottom: 25px; padding: 15px; border: 1px dashed #333; border-radius: 12px; background: rgba(255,255,255,0.01); }
+        .btn-upload { background: var(--gold); color: #000; padding: 8px 15px; border-radius: 8px; font-size: 10px; font-weight: 900; cursor: pointer; text-transform: uppercase; border: none; }
 
-        .btn-prime { width: 100%; background: var(--gold); color: #000; border: none; padding: 28px; border-radius: 18px; font-weight: 900; cursor: pointer; text-transform: uppercase; letter-spacing: 5px; font-size: 16px; transition: 0.5s; }
-        .btn-prime.ready { animation: pulseGlow 1.5s infinite; transform: scale(1.02); }
+        .btn-prime { width: 100%; background: var(--gold); color: #000; border: none; padding: 25px; border-radius: 15px; font-weight: 900; cursor: pointer; text-transform: uppercase; letter-spacing: 3px; font-size: 16px; transition: 0.4s; }
+        .btn-prime:hover { filter: brightness(1.2); transform: translateY(-2px); }
 
-        @keyframes pulseGlow { 0% { box-shadow: 0 0 0 0 rgba(191, 149, 63, 0.6); } 70% { box-shadow: 0 0 0 20px rgba(191, 149, 63, 0); } 100% { box-shadow: 0 0 0 0 rgba(191, 149, 63, 0); } }
+        #output-zone { display: none; margin-top: 40px; width: 100%; max-width: 850px; }
+        #prompt-result { width: 100%; height: 400px; background: #000; color: #fcf6ba; border: 1px solid #bf953f; padding: 25px; border-radius: 15px; font-family: monospace; }
 
-        #output-zone { display: none; margin-top: 50px; width: 100%; max-width: 850px; }
-        #prompt-result { width: 100%; height: 480px; background: #000; color: #fcf6ba; border: 1px solid #bf953f; padding: 30px; border-radius: 20px; font-family: monospace; }
-
-        footer { margin-top: 80px; padding: 40px; text-align: center; border-top: 1px solid var(--border); }
-        .footer-text { font-size: 10px; color: var(--text); opacity: 0.5; text-transform: uppercase; letter-spacing: 2px; line-height: 2; }
+        footer { margin-top: 60px; padding: 40px; text-align: center; border-top: 1px solid var(--border); line-height: 2; }
+        .footer-text { font-size: 10px; color: var(--text); opacity: 0.5; text-transform: uppercase; letter-spacing: 2px; }
     </style>
 </head>
 <body>
@@ -74,31 +72,30 @@
             <label>PARÂMETROS TÉCNICOS & RIGOR JURÍDICO</label>
             <textarea id="base" rows="2" placeholder="Diretrizes técnicas, leis ou regras de ouro..."></textarea>
 
-            <label>UPLOAD DE DOCUMENTOS (INTELIGÊNCIA AUXILIAR)</label>
-            <div class="upload-area" onclick="document.getElementById('file-input').click()">
-                <span id="upload-status">CLIQUE PARA FAZER UPLOAD DE PDF/TXT</span>
+            <div class="upload-row">
+                <button class="btn-upload" onclick="document.getElementById('file-input').click()">Anexar Doc</button>
+                <span id="upload-status" style="font-size: 10px; color: #666;">PDF/TXT PARA INTELIGÊNCIA AUXILIAR</span>
                 <input type="file" id="file-input" style="display:none" onchange="handleUpload()">
             </div>
 
             <label>INPUT DE INTELIGÊNCIA BRUTA</label>
             <textarea id="fatos" rows="6" oninput="monitorar()" placeholder="Descreva os fatos ou a ideia bruta aqui..."></textarea>
 
-            <button id="btn-main" class="btn-prime" onclick="processar()">Ativar Protocolo MODO ELITE</button>
+            <button id="btn-main" class="btn-prime" onclick="processar()">Gerar Comando Elite</button>
         </div>
 
         <div id="output-zone">
-            <label style="color: #fcf6ba;">💎 DIAMANTE POLIDO (RIGOR ABSOLUTO):</label>
+            <label style="color: #fcf6ba;">💎 DIAMANTE POLIDO:</label>
             <textarea id="prompt-result" readonly></textarea>
-            <button onclick="copiar()" style="width:100%; padding:25px; background:var(--gold); border:none; border-radius:15px; font-weight:900; margin-top:20px; cursor:pointer; text-transform:uppercase;">Copiar Comando</button>
+            <button onclick="copiar()" style="width:100%; padding:20px; background:var(--gold); border:none; border-radius:15px; font-weight:900; margin-top:15px; cursor:pointer;">Copiar Comando</button>
         </div>
     </main>
 
     <footer>
         <div class="footer-text">
-            <strong>CÁSSIA PROMPT ® | V8 ELITE EDITION | LICENÇA INTERNACIONAL</strong><br>
-            <span id="licenciado-para" style="color: #bf953f; font-weight: bold; font-size: 11px;">LICENCIADO PARA: AGUARDANDO...</span><br>
-            ENGENHARIA DE COMANDO COM FILTRO ANTI-ALUCINAÇÃO ATIVADO<br><br>
-            <span style="opacity: 0.8; color: #ff4d4d;">A RESPONSABILIDADE É DE QUEM ESTÁ USANDO. O PROGRAMA APENAS GERA O PROMPT.</span>
+            <strong>CÁSSIA PROMPT ® | V8 ELITE EDITION</strong><br>
+            <span id="licenciado-para" style="color: #bf953f; font-weight: bold; font-size: 11px;">LICENCIADO PARA: AGUARDANDO...</span><br><br>
+            A RESPONSABILIDADE É DE QUEM ESTÁ USANDO. O PROGRAMA APENAS GERA O PROMPT.
         </div>
     </footer>
 </div>
@@ -109,12 +106,11 @@
         const userParam = (params.get('user') || params.get('id') || "").toLowerCase();
         const displayLicenca = document.getElementById('licenciado-para');
 
-        let nomeFinal = "CLIENTE VIP"; // PADRÃO PARA LINKS GERADOS (COMO TKFU)
+        let nomeFinal = "CLIENTE VIP"; 
         
         if (userParam.includes("natalia")) nomeFinal = "DRA. NATALIA";
         else if (userParam.includes("helen")) nomeFinal = "HELEN CRISTINA";
         else if (userParam.includes("paula")) nomeFinal = "DRA. PAULA";
-        else if (userParam === "") nomeFinal = "ACESSO ADMINISTRATIVO";
 
         displayLicenca.innerText = "LICENCIADO PARA: " + nomeFinal;
     }
@@ -122,41 +118,34 @@
     function monitorar() {
         const d = document.getElementById('destino').value.length;
         const f = document.getElementById('fatos').value.length;
-        let progresso = Math.min(100, ((d / 20) * 30) + ((f / 60) * 70));
+        let progresso = Math.min(100, ((d / 15) * 40) + ((f / 40) * 60));
         document.getElementById('bar-fill').style.width = Math.round(progresso) + "%";
         document.getElementById('percent-text').innerText = Math.round(progresso) + "%";
-        if(progresso >= 90) document.getElementById('btn-main').classList.add('ready');
     }
 
     function handleUpload() {
-        const status = document.getElementById('upload-status');
-        status.innerText = "DOCUMENTO INTEGRADO COM SUCESSO!";
-        status.style.color = "#bf953f";
+        document.getElementById('upload-status').innerText = "DOCUMENTO SINCRONIZADO!";
+        document.getElementById('upload-status').style.color = "#bf953f";
     }
 
     function processar() {
         const btn = document.getElementById('btn-main');
-        btn.innerText = "SINCRONIZANDO DADOS...";
+        btn.innerText = "POLINDO DIAMANTE...";
         setTimeout(() => {
-            gerarPrompt();
-            btn.innerText = "REATIVAR PROTOCOLO";
-        }, 1200);
-    }
-
-    function gerarPrompt() {
-        const d = document.getElementById('destino').value;
-        const b = document.getElementById('base').value;
-        const f = document.getElementById('fatos').value;
-        const mestre = `[ORDEM V8 ELITE]\nOBJETIVO: ${d}\nDIRETRIZES: ${b}\nFATOS: ${f}\n\n⚠️ RIGOR MÁXIMO: PROIBIDO ALUCINAR. MANTENHA A VERDADE ABSOLUTA.`;
-        document.getElementById('prompt-result').value = mestre;
-        document.getElementById('output-zone').style.display = 'block';
-        window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'});
+            const d = document.getElementById('destino').value;
+            const b = document.getElementById('base').value;
+            const f = document.getElementById('fatos').value;
+            document.getElementById('prompt-result').value = `[V8 ELITE]\nMISSÃO: ${d}\nREGRAS: ${b}\nINPUT: ${f}\n\n⚠️ RIGOR: SEM ALUCINAÇÕES.`;
+            document.getElementById('output-zone').style.display = 'block';
+            btn.innerText = "GERAR COMANDO ELITE";
+            window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'});
+        }, 1000);
     }
 
     function copiar() {
         document.getElementById('prompt-result').select();
         document.execCommand('copy');
-        alert("💎 DIAMANTE COPIADO!");
+        alert("💎 COPIADO!");
     }
 
     window.onload = checkAccess;
